Fix 1px jump when switching to multifactor

--- a/app/assets/stylesheets/sign_in.scss
+++ b/app/assets/stylesheets/sign_in.scss
@@ -26,7 +26,7 @@
     background: url(asset-path("student-insights-logo-small.png")) no-repeat;
   }
 
-  .SignInPage-form {
+  .SignInPage-form, .SignInPage-multifactor-form {
     display: flex;
     flex-direction: row;
     align-items: flex-end;
